Fixed button overflow in level bg form

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -4026,6 +4026,9 @@ body.sorting ul.collapsedSortTarget {
 		#levelForm {
 			.bg {
 				align-items: stretch;
+				button.pick {
+					width: 0;
+				}
 				.pos {
 					display: flex;
 					justify-content: stretch;
